EasyUI+ comparison based three tier architecture
EasyUI+ comparison based three tier architecture

--- a/WebApplication3/WebApplication3/HTMLPage1.html
+++ b/WebApplication3/WebApplication3/HTMLPage1.html
@@ -15,10 +15,10 @@
         var AdminName = document.getElementById("UserName").value; ///模糊查询取管理员姓名 byid取<input id="UserName" />
 
         var QuanXian = document.getElementById("quanxian").value;
-        $('#workerName').combobox('select', row.WorkerRealName);
-        $('#workerName').combobox('setValue', row.WorkerRealName);
-        $('#workerName').combobox('setText', row.WorkerRealName);
-        $('#workerName').combobox('getValue', row.WorkerRealName);
+      //  $('#workerName').combobox('select', row.WorkerRealName);
+    //    $('#workerName').combobox('setValue', row.WorkerRealName);
+       // $('#workerName').combobox('setText', row.WorkerRealName);
+       // $('#workerName').combobox('getValue', row.WorkerRealName);
         //$("#quanxian").combobox("getValue");  
 
         queryParams.StartTime = StartTime;
